Sun Apr  9 23:42:16 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-04-07 Jonathan Larmour <jlarmour@redhat.co.uk>:
	* mips-tdep.c (saved_gpreg_size_enums): Define enum command for
	new "set mips saved-gpreg-size" command
	(MIPS_SAVED_REGSIZE): Now a function mips_saved_regsize()
	(MIPS_DEFAULT_SAVED_REGSIZE): Define for default MIPS_SAVED_REGSIZE,
	either from target, or gdb multi-arch
	(show_mips_command): New. For "show mips" prefix command
	(set_mips_command): New. For "show mips" prefix command
	(_initialize_mips_tdep): Add top-level mips prefix command
	Add "set mips saved-gpreg-size" command

	* mips-tdep.c (struct gdbarch_tdep): Rename mips_saved_regsize to
 	mips_default_saved_regsize.
	(mips_gdbarch_init): Update.
	(MIPS_DEFAULT_SAVED_REGSIZE): Update.
	(mips_gdbarch_init): Use MIPS_REGSIZE as the default value for
 	mips_default_saved_regsize.

Sun Apr  9 23:27:00 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-04-07 J.T. Conklin <jtc@redback.com>:
	* lynx-nat.c (fetch_inferior_registers, store_inferior_registers):
	replace calls to target_xfer_memory() with target_read_memory()
	and target_write_memory().

Sun Apr  9 22:54:29 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* valops.c (value_rtti_type): Compare VALUE_ADDRESS with ``0'' not
 	NULL. Macro returns a CORE_ADDR.

2000-04-08  Jim Blandy  <jimb@redhat.com>

	* dwarf2read.c: Revert Andrew Cagney's change of Dec 15, 1997.
	Don't include "bfd-elf.h".
	(address_significant_size): Delete variable.
	(dwarf2_build_psymtabs_hard): Don't set it, or check for
	consistency between it and the Dwarf 2 compilation unit header
	address size.
	(read_address): Don't mask off bits above
	address_significant_size.
	* Makefile.in (dwarf2read.o): Don't depend on $(elf_bfd_h).
	(elf_bfd_h): Remove variable; it's no longer used.

2000-04-08  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* configure.in (NEW_PROC_API):  Escape square brackets when testing
	for solaris2.[678].